--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Where Every Toy Tells a Story! KidzHaven</title>
+    <title>KidzHaven</title>
   </head>
   <body>
     <div id="root"></div>
